# Education-project

./: .gitignore  db.sqlite3  manage.py  pyproject.toml
Education_project/: asgi.py  settings.py  urls.py  wsgi.py
Education_system/: apps.py  models.py  run.py
Education_system/API/: serializers.py  views.py
Education_system/migrations/: 0001_initial.py
Users/migrations/: 0001_initial.py
